Fixed spacing between tabs at top

--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -2,8 +2,16 @@
    Navigation
    ========================================================================== */
 
+.spacer {
+  flex-grow: 1;
+}
+
 .c-navigation__container {
-  //flex-grow: 1;
+  flex-grow: 2;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 
